@@ -20,19 +20,17 @@
  */
 package org.candlepin.subscriptions.subscription;
 
-import static org.candlepin.subscriptions.utilization.api.model.ProductId.RHOSAK;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 
+import com.redhat.swatch.configuration.registry.ProductId;
 import java.time.OffsetDateTime;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
-import org.candlepin.subscriptions.db.AccountListSource;
-import org.candlepin.subscriptions.db.OfferingRepository;
+import org.candlepin.clock.ApplicationClock;
 import org.candlepin.subscriptions.db.SubscriptionRepository;
 import org.candlepin.subscriptions.db.model.BillingProvider;
 import org.candlepin.subscriptions.db.model.Offering;
@@ -41,10 +39,7 @@ import org.candlepin.subscriptions.db.model.Subscription;
 import org.candlepin.subscriptions.db.model.Usage;
 import org.candlepin.subscriptions.resource.SubscriptionTableController;
 import org.candlepin.subscriptions.security.WithMockRedHatPrincipal;
-import org.candlepin.subscriptions.tally.AccountListSourceException;
-import org.candlepin.subscriptions.util.ApplicationClock;
 import org.candlepin.subscriptions.utilization.api.model.BillingProviderType;
-import org.candlepin.subscriptions.utilization.api.model.ProductId;
 import org.candlepin.subscriptions.utilization.api.model.ServiceLevelType;
 import org.candlepin.subscriptions.utilization.api.model.SkuCapacity;
 import org.candlepin.subscriptions.utilization.api.model.SkuCapacityReport;
@@ -54,9 +49,11 @@ import org.candlepin.subscriptions.utilization.api.model.SubscriptionEventType;
 import org.candlepin.subscriptions.utilization.api.model.UsageType;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.test.context.ActiveProfiles;
 
 @SpringBootTest
@@ -64,24 +61,18 @@ import org.springframework.test.context.ActiveProfiles;
 @WithMockRedHatPrincipal("123456")
 class SubscriptionTableControllerOnDemandTest {
 
-  private final OffsetDateTime min = OffsetDateTime.now().minusDays(4);
-  private final OffsetDateTime max = OffsetDateTime.now().plusDays(4);
+  private static final ProductId ROSA = ProductId.fromString("rosa");
+  private static final ProductId RHEL_x86_ELS_PAYG = ProductId.fromString("rhel-for-x86-els-payg");
+  private static final String OFFERING_DESCRIPTION_SUFFIX = " test description";
 
   @MockBean SubscriptionRepository subscriptionRepository;
-  @MockBean OfferingRepository offeringRepository;
-  @MockBean AccountListSource accountListSource;
   @Autowired ApplicationClock clock;
-
   @Autowired SubscriptionTableController subscriptionTableController;
 
   @BeforeEach
-  void setup() throws AccountListSourceException {
+  void setup() {
     // The @ReportingAccessRequired annotation checks if the org of the user is allowlisted
     // to receive reports or not. This org will be used throughout most tests.
-    when(accountListSource.containsReportingAccount("account123456")).thenReturn(true);
-    when(offeringRepository.findByProductName(any()))
-        .thenReturn(
-            Arrays.asList(MW01882.toOffering(), MW01882RN.toOffering(), MW01882S.toOffering()));
   }
 
   private static final SubCapSpec MW01882 =
@@ -117,24 +108,29 @@ class SubscriptionTableControllerOnDemandTest {
           ServiceLevel.STANDARD,
           Usage.DEVELOPMENT_TEST,
           false);
+  private static final SubCapSpec RH02781HR =
+      SubCapSpec.offering(
+          "RH02781HR",
+          "RHEL Server",
+          2,
+          null,
+          null,
+          null,
+          ServiceLevel.PREMIUM,
+          Usage.PRODUCTION,
+          true);
 
   private enum Org {
-    STANDARD("711497", "477931");
+    STANDARD("711497");
 
     private final String orgId;
-    private final String accountNumber;
 
-    Org(String orgId, String accountNumber) {
+    Org(String orgId) {
       this.orgId = orgId;
-      this.accountNumber = accountNumber;
     }
 
     public String orgId() {
       return orgId;
-    }
-
-    public String accountNumber() {
-      return accountNumber;
     }
   }
 
@@ -145,26 +141,22 @@ class SubscriptionTableControllerOnDemandTest {
    * @param specs specifies what sub capacities to return
    * @return a list of subscription capacity views
    */
-  private List<Subscription> givenSubscriptions(Org org, ProductId productId, SubCapSpec... specs) {
-    return Arrays.stream(specs)
-        .map(s -> s.createSubscription(org, productId))
-        .collect(Collectors.toUnmodifiableList());
+  private List<Subscription> givenSubscriptions(Org org, SubCapSpec... specs) {
+    return Arrays.stream(specs).map(s -> s.createSubscription(org)).toList();
   }
 
   @Test
   void testGetSkuCapacityReportSingleSub() {
     // Given an org with one active sub with a quantity of 1
-    ProductId productId = RHOSAK;
     Sub expectedSub = Sub.sub("1234", MW01882.sku, "1235", 1);
-    List<Subscription> givenSubs =
-        givenSubscriptions(Org.STANDARD, productId, MW01882.withSub(expectedSub));
+    List<Subscription> givenSubs = givenSubscriptions(Org.STANDARD, MW01882.withSub(expectedSub));
 
     when(subscriptionRepository.findByCriteria(any(), any())).thenReturn(givenSubs);
 
     // When requesting a SKU capacity report for the eng product,
     SkuCapacityReport actual =
         subscriptionTableController.capacityReportBySku(
-            productId, null, null, null, null, null, null, null, null, null, null);
+            ROSA, null, null, null, null, null, null, null, null, null, null);
 
     // Then the report contains a single inventory item containing the sub and appropriate
     // quantity and capacities.
@@ -185,23 +177,19 @@ class SubscriptionTableControllerOnDemandTest {
   void testGetSkuCapacityReportMultipleSubsSameSku() {
     // Given an org with two active subs with different quantities for the same SKU,
     // and the subs have different ending dates,
-    ProductId productId = RHOSAK;
     Sub expectedNewerSub = Sub.sub("1234", MW01882.sku, "1235", 1, BillingProvider.RED_HAT, 5, 7);
     Sub expectedOlderSub = Sub.sub("1236", MW01882.sku, "1237", 2, BillingProvider.RED_HAT, 6, 6);
 
     List<Subscription> givenSubs =
         givenSubscriptions(
-            Org.STANDARD,
-            productId,
-            MW01882.withSub(expectedNewerSub),
-            MW01882.withSub(expectedOlderSub));
+            Org.STANDARD, MW01882.withSub(expectedNewerSub), MW01882.withSub(expectedOlderSub));
 
     when(subscriptionRepository.findByCriteria(any(), any())).thenReturn(givenSubs);
 
     // When requesting a SKU capacity report for the eng product,
     SkuCapacityReport actual =
         subscriptionTableController.capacityReportBySku(
-            productId, null, null, null, null, null, null, null, null, null, null);
+            ROSA, null, null, null, null, null, null, null, null, null, null);
 
     // Then the report contains a single inventory item containing the subs and appropriate
     // quantity and capacities.
@@ -225,34 +213,19 @@ class SubscriptionTableControllerOnDemandTest {
   void testGetSkuCapacityReportDifferentSkus() {
     // Given an org with two active subs with different quantities for different SKUs,
     // and the subs have different ending dates,
-
-    ProductId productId = RHOSAK;
     Sub expectedNewerSub = Sub.sub("1234", MW01882.sku, "1235", 4, BillingProvider.RED_HAT, 5, 7);
     Sub expectedOlderSub = Sub.sub("1236", MW01882RN.sku, "1237", 5, BillingProvider.RED_HAT, 6, 6);
 
     List<Subscription> givenSubs =
         givenSubscriptions(
-            Org.STANDARD,
-            productId,
-            MW01882.withSub(expectedNewerSub),
-            MW01882RN.withSub(expectedOlderSub));
+            Org.STANDARD, MW01882.withSub(expectedNewerSub), MW01882RN.withSub(expectedOlderSub));
 
     when(subscriptionRepository.findByCriteria(any(), any())).thenReturn(givenSubs);
 
     // When requesting a SKU capacity report for the eng product, sorted by SKU
     SkuCapacityReport actual =
         subscriptionTableController.capacityReportBySku(
-            productId,
-            null,
-            null,
-            null,
-            null,
-            null,
-            null,
-            null,
-            null,
-            SkuCapacityReportSort.SKU,
-            null);
+            ROSA, null, null, null, null, null, null, null, null, SkuCapacityReportSort.SKU, null);
 
     // Then the report contains two inventory items containing a sub with appropriate
     // quantity and capacities, and RH00604F5 is listed first.
@@ -281,14 +254,12 @@ class SubscriptionTableControllerOnDemandTest {
   @Test
   void testGetSkuCapacityReportNoSub() {
     // Given an org with no active subs,
-    ProductId productId = RHOSAK;
-
     when(subscriptionRepository.findByCriteria(any(), any())).thenReturn(Collections.emptyList());
 
     // When requesting a SKU capacity report for an eng product,
     SkuCapacityReport actual =
         subscriptionTableController.capacityReportBySku(
-            productId, null, null, null, null, null, null, null, null, null, null);
+            ROSA, null, null, null, null, null, null, null, null, null, null);
 
     // Then the report contains no inventory items.
     assertEquals(0, actual.getData().size(), "An empty inventory list should be returned.");
@@ -296,53 +267,35 @@ class SubscriptionTableControllerOnDemandTest {
 
   @Test
   void testShouldUseQueryBasedOnHeaderAndParameters() {
-    ProductId productId = RHOSAK;
     Sub expectedNewerSub = Sub.sub("1234", MW01882.sku, "1235", 1, BillingProvider.RED_HAT, 5, 7);
     Sub expectedOlderSub = Sub.sub("1236", MW01882.sku, "1237", 2, BillingProvider.RED_HAT, 6, 6);
 
     List<Subscription> givenSubs =
         givenSubscriptions(
-            Org.STANDARD,
-            productId,
-            MW01882.withSub(expectedNewerSub),
-            MW01882.withSub(expectedOlderSub));
+            Org.STANDARD, MW01882.withSub(expectedNewerSub), MW01882.withSub(expectedOlderSub));
 
     when(subscriptionRepository.findByCriteria(any(), any())).thenReturn(givenSubs);
 
     SkuCapacityReport report =
         subscriptionTableController.capacityReportBySku(
-            RHOSAK,
-            null,
-            null,
-            null,
-            null,
-            null,
-            null,
-            null,
-            null,
-            SkuCapacityReportSort.SKU,
-            null);
+            ROSA, null, null, null, null, null, null, null, null, SkuCapacityReportSort.SKU, null);
     assertEquals(1, report.getData().size());
   }
 
   @Test
   void testShouldUseSlaQueryParam() {
-    ProductId productId = RHOSAK;
     Sub expectedNewerSub = Sub.sub("1234", MW01882.sku, "1235", 1, BillingProvider.RED_HAT, 5, 7);
     Sub expectedOlderSub = Sub.sub("1236", MW01882.sku, "1237", 2, BillingProvider.RED_HAT, 6, 6);
 
     List<Subscription> givenSubs =
         givenSubscriptions(
-            Org.STANDARD,
-            productId,
-            MW01882.withSub(expectedNewerSub),
-            MW01882.withSub(expectedOlderSub));
+            Org.STANDARD, MW01882.withSub(expectedNewerSub), MW01882.withSub(expectedOlderSub));
 
     when(subscriptionRepository.findByCriteria(any(), any())).thenReturn(givenSubs);
 
     SkuCapacityReport reportForMatchingSLA =
         subscriptionTableController.capacityReportBySku(
-            RHOSAK,
+            ROSA,
             null,
             null,
             null,
@@ -358,23 +311,18 @@ class SubscriptionTableControllerOnDemandTest {
 
   @Test
   void testShouldUseUsageQueryParam() {
-
-    ProductId productId = RHOSAK;
     Sub expectedNewerSub = Sub.sub("1234", MW01882.sku, "1235", 1, BillingProvider.RED_HAT, 5, 7);
     Sub expectedOlderSub = Sub.sub("1236", MW01882.sku, "1237", 2, BillingProvider.RED_HAT, 6, 6);
 
     List<Subscription> givenSubs =
         givenSubscriptions(
-            Org.STANDARD,
-            productId,
-            MW01882.withSub(expectedNewerSub),
-            MW01882.withSub(expectedOlderSub));
+            Org.STANDARD, MW01882.withSub(expectedNewerSub), MW01882.withSub(expectedOlderSub));
 
     when(subscriptionRepository.findByCriteria(any(), any())).thenReturn(givenSubs);
 
     SkuCapacityReport reportForMatchingUsage =
         subscriptionTableController.capacityReportBySku(
-            RHOSAK,
+            ROSA,
             null,
             null,
             null,
@@ -392,42 +340,39 @@ class SubscriptionTableControllerOnDemandTest {
   void testGetSkuCapacityReportUnlimitedQuantity() {
     // Given an org with one active sub with a quantity of 1 and has an eng product with unlimited
     // usage.
-    ProductId productId = RHOSAK;
     Sub expectedSub = Sub.sub("1234", MW01882RN.sku, "1235", 1);
 
-    List<Subscription> givenSubs =
-        givenSubscriptions(Org.STANDARD, productId, MW01882RN.withSub(expectedSub));
+    List<Subscription> givenSubs = givenSubscriptions(Org.STANDARD, MW01882RN.withSub(expectedSub));
 
     when(subscriptionRepository.findByCriteria(any(), any())).thenReturn(givenSubs);
 
     // When requesting a SKU capacity report for the eng product,
     SkuCapacityReport actual =
         subscriptionTableController.capacityReportBySku(
-            productId, null, null, null, null, null, null, null, null, null, null);
+            ROSA, null, null, null, null, null, null, null, null, null, null);
 
     // Then the report contains a single inventory item containing the sub and HasInfiniteQuantity
     // should be true.
     assertEquals(1, actual.getData().size(), "Wrong number of items returned");
     SkuCapacity actualItem = actual.getData().get(0);
     assertTrue(actualItem.getHasInfiniteQuantity(), "HasInfiniteQuantity should be true");
+    assertEquals(actualItem.getSku() + OFFERING_DESCRIPTION_SUFFIX, actualItem.getProductName());
   }
 
   @Test
   void testOnDemandSkuPopulatesNextEvent() {
     // Given an org with one active sub with a quantity of 1 and has an eng product with unlimited
     // usage.
-    ProductId productId = RHOSAK;
     Sub expectedSub = Sub.sub("1234", MW01882RN.sku, "1235", 1);
 
-    List<Subscription> givenSubs =
-        givenSubscriptions(Org.STANDARD, productId, MW01882RN.withSub(expectedSub));
+    List<Subscription> givenSubs = givenSubscriptions(Org.STANDARD, MW01882RN.withSub(expectedSub));
 
     when(subscriptionRepository.findByCriteria(any(), any())).thenReturn(givenSubs);
 
     // When requesting a SKU capacity report for the eng product,
     SkuCapacityReport actual =
         subscriptionTableController.capacityReportBySku(
-            productId, null, null, null, null, null, null, null, null, null, null);
+            ROSA, null, null, null, null, null, null, null, null, null, null);
     SkuCapacity actualItem = actual.getData().get(0);
 
     // Then the report should contain end date of the contributing subscription
@@ -438,39 +383,48 @@ class SubscriptionTableControllerOnDemandTest {
 
   @Test
   void testShouldGetUniqueResultPerBillingProviderSameSku() {
-    ProductId productId = RHOSAK;
     Sub expectedNewerSub = Sub.sub("1234", MW01882.sku, "1235", 1, BillingProvider.RED_HAT, 5, 7);
     Sub expectedOlderSub = Sub.sub("1236", MW01882.sku, "1237", 2, BillingProvider.AWS, 6, 6);
 
     List<Subscription> givenSubs =
         givenSubscriptions(
-            Org.STANDARD,
-            productId,
-            MW01882.withSub(expectedNewerSub),
-            MW01882.withSub(expectedOlderSub));
+            Org.STANDARD, MW01882.withSub(expectedNewerSub), MW01882.withSub(expectedOlderSub));
 
     when(subscriptionRepository.findByCriteria(any(), any())).thenReturn(givenSubs);
 
     SkuCapacityReport reportForMatchingUsage =
         subscriptionTableController.capacityReportBySku(
-            RHOSAK,
-            null,
-            null,
-            null,
-            null,
-            null,
-            null,
-            null,
-            null,
-            SkuCapacityReportSort.SKU,
-            null);
+            ROSA, null, null, null, null, null, null, null, null, SkuCapacityReportSort.SKU, null);
     assertEquals(2, reportForMatchingUsage.getData().size());
     var billingProvidersReturned =
-        reportForMatchingUsage.getData().stream()
-            .map(v -> v.getBillingProvider())
-            .collect(Collectors.toList());
+        reportForMatchingUsage.getData().stream().map(SkuCapacity::getBillingProvider).toList();
     assertTrue(billingProvidersReturned.contains(BillingProviderType.AWS));
     assertTrue(billingProvidersReturned.contains(BillingProviderType.RED_HAT));
+  }
+
+  @Test
+  void testGetSkuCapacityReportWithBillingProvider() {
+    Sub expectedSub = Sub.sub("1234", RH02781HR.sku, "1235", 1, BillingProvider.AWS, 6, 6);
+
+    List<Subscription> givenSubs = givenSubscriptions(Org.STANDARD, RH02781HR.withSub(expectedSub));
+
+    when(subscriptionRepository.findByCriteria(any(), any())).thenReturn(givenSubs);
+
+    when(subscriptionRepository.findAll(Mockito.<Specification<Subscription>>any()))
+        .thenReturn(givenSubs);
+
+    // When requesting a SKU capacity report for the eng product,
+    SkuCapacityReport actual =
+        subscriptionTableController.capacityReportBySku(
+            RHEL_x86_ELS_PAYG, null, null, null, null, null, null, null, null, null, null);
+
+    // Then the report contains a single inventory item containing the sub and HasInfiniteQuantity
+    // should be true.
+    assertEquals(1, actual.getData().size(), "Wrong number of items returned");
+    SkuCapacity actualItem = actual.getData().get(0);
+    assertTrue(actualItem.getHasInfiniteQuantity(), "HasInfiniteQuantity should be true");
+    assertEquals(actualItem.getSku() + OFFERING_DESCRIPTION_SUFFIX, actualItem.getProductName());
+    assertEquals("aws", actual.getData().get(0).getBillingProvider().toString());
   }
 
   private static void assertSubscription(Sub expectedSub, SkuCapacitySubscription actual) {
@@ -507,11 +461,6 @@ class SubscriptionTableControllerOnDemandTest {
 
     public static Sub sub(String id, String sku, String number, Integer quantity) {
       return sub(id, sku, number, quantity, BillingProvider.RED_HAT, 6, 6);
-    }
-
-    public static Sub sub(
-        String id, String sku, String number, Integer quantity, BillingProvider billingProvider) {
-      return sub(id, sku, number, quantity, billingProvider, 6, 6);
     }
 
     /* Also specifies the sub active timeframe, relative to now. */
@@ -613,13 +562,12 @@ class SubscriptionTableControllerOnDemandTest {
           sub);
     }
 
-    public Subscription createSubscription(Org org, ProductId productId) {
+    public Subscription createSubscription(Org org) {
       return Subscription.builder()
           .orgId(org.orgId())
           .subscriptionId(sub.id)
           .quantity(sub.quantity)
           .subscriptionNumber(sub.number)
-          .accountNumber(org.accountNumber)
           .billingProvider(sub.billingProvider)
           .startDate(sub.start)
           .endDate(sub.end)
@@ -634,6 +582,7 @@ class SubscriptionTableControllerOnDemandTest {
           .serviceLevel(this.serviceLevel)
           .usage(this.usage)
           .hasUnlimitedUsage(this.hasUnlimitedUsage)
+          .description(this.sku + OFFERING_DESCRIPTION_SUFFIX)
           .build();
     }
   }
